Fix scrollbar gutter

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,8 @@
 
 html {
   min-width: 360px;
+  scrollbar-gutter: stable;
+  @apply scroll-smooth;
 }
 
 .prose .anchor {
